--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,9 @@ quarkus.smallrye-openapi.path=/openapi
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger
 quarkus.swagger-ui.theme=original
+
+# Database
+quarkus.datasource.db-kind=sqlite
+quarkus.datasource.jdbc.url=jdbc:sqlite:jenga.db
+
+quarkus.hibernate-orm.schema-management.strategy=drop-and-create
