--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,4 +15,7 @@ quarkus.swagger-ui.theme=original
 quarkus.datasource.db-kind=sqlite
 quarkus.datasource.jdbc.url=jdbc:sqlite:jenga.db
 
-quarkus.hibernate-orm.schema-management.strategy=drop-and-create
+quarkus.hibernate-orm.schema-management.strategy=update
+
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.bind-parameters=true
