--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,9 +12,10 @@ quarkus.swagger-ui.path=/swagger
 quarkus.swagger-ui.theme=original
 
 # Database
-quarkus.datasource.db-kind=sqlite
-quarkus.datasource.jdbc.url=jdbc:sqlite:jenga.db
-
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=username
+quarkus.datasource.password=password
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/jenga
 quarkus.hibernate-orm.schema-management.strategy=update
 
 quarkus.hibernate-orm.log.sql=true
