--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,9 +13,9 @@ quarkus.swagger-ui.theme=original
 
 # Database
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=username
-quarkus.datasource.password=password
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/jenga
+quarkus.datasource.username=${DB_USERNAME}
+quarkus.datasource.password=${DB_PASSWORD}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 quarkus.hibernate-orm.schema-management.strategy=update
 
 quarkus.hibernate-orm.log.sql=true
