Custom quarkus startup banner

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,9 @@ quarkus.log.level=INFO
 
 quarkus.http.port=8080
 
+quarkus.banner.enabled=true
+quarkus.banner.path=banner.txt
+
 quarkus.smallrye-openapi.enabled=true
 quarkus.smallrye-openapi.path=/openapi
 
