--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,10 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-security-jpa</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
