moved the MCP_Server from its own Python Docker to the Backend Docker and switched to Java

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,6 @@ quarkus.http.auth.permission.auth.policy=permit
 mp.jwt.algorithm=HS256
 mp.jwt.verify.issuer=jenga
 mp.jwt.verify.clock.skew=30
+
+quarkus.langchain4j.ai.gemini.api-key=${QUARKUS_LANGCHAIN4J_AI_GEMINI_API_KEY:}
+quarkus.langchain4j.ai.gemini.chat-model.model-id=gemini-2.5-flash
