moved the MCP_Server from its own Python Docker to the Backend Docker and switched to Java

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,6 @@ quarkus.smallrye-openapi.path=/openapi
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger
 quarkus.swagger-ui.theme=original
+
+quarkus.langchain4j.ai.gemini.api-key=${QUARKUS_LANGCHAIN4J_AI_GEMINI_API_KEY:}
+quarkus.langchain4j.ai.gemini.chat-model.model-id=gemini-2.5-flash
