--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,8 @@ quarkus.hibernate-orm.schema-management.strategy=update
 
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.bind-parameters=true
+
+# Jwt
+mp.jwt.algorithm=HS256
+mp.jwt.verify.issuer=jenga
+mp.jwt.verify.clock.skew=30
