--- a/frontend/jenga/package.json
+++ b/frontend/jenga/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-solid": "^2.11.8"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.3",
     "@suid/icons-material": "^0.9.0",
     "@suid/material": "^0.19.0",
     "@suid/vite-plugin": "^0.4.1",
