Implemented Changes from Code Review

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,6 +24,9 @@ quarkus.hibernate-orm.schema-management.strategy=update
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.bind-parameters=true
 
+# Only for Development and Testing
+# %dev.quarkus.hibernate-orm.database.generation=drop-and-create 
+
 # Security
 # Protect API
 quarkus.http.auth.permission.api.paths=/api/*
