--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -43,3 +43,4 @@ mp.jwt.verify.clock.skew=30
 
 quarkus.langchain4j.ai.gemini.api-key=${QUARKUS_LANGCHAIN4J_AI_GEMINI_API_KEY:}
 quarkus.langchain4j.ai.gemini.chat-model.model-id=gemini-2.5-flash
+quarkus.langchain4j.ai.gemini.timeout=60s
