Disable stdio of mcp server

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -44,3 +44,6 @@ mp.jwt.verify.clock.skew=30
 quarkus.langchain4j.ai.gemini.api-key=${QUARKUS_LANGCHAIN4J_AI_GEMINI_API_KEY:}
 quarkus.langchain4j.ai.gemini.chat-model.model-id=gemini-2.5-flash
 quarkus.langchain4j.ai.gemini.timeout=60s
+
+# Needs to be disabled when Quarkus runs without TTY (e.g. Container)
+quarkus.mcp.server.stdio.enabled=false
