Use Key-Pair for JWT signing and verifying

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -43,3 +43,7 @@ nb-configuration.xml
 /.quarkus/cli/plugins/
 # TLS Certificates
 .certs/
+
+# Keys
+src/main/resources/privateKey.pem
+src/main/resources/publicKey.pem
