--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,7 +37,11 @@ quarkus.http.auth.permission.auth.paths=/api/auth/*
 quarkus.http.auth.permission.auth.policy=permit
 
 # Jwt
-mp.jwt.algorithm=HS256
+# Signing (Private)
+smallrye.jwt.sign.key.location=privateKey.pem
+# Verification (Public)
+mp.jwt.verify.publickey.location=publicKey.pem
+
 mp.jwt.verify.issuer=jenga
 mp.jwt.verify.clock.skew=30
 
