Use Key-Pair only in prod

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,9 +38,9 @@ quarkus.http.auth.permission.auth.policy=permit
 
 # Jwt
 # Signing (Private)
-smallrye.jwt.sign.key.location=privateKey.pem
+%prod.smallrye.jwt.sign.key.location=privateKey.pem
 # Verification (Public)
-mp.jwt.verify.publickey.location=publicKey.pem
+%prod.mp.jwt.verify.publickey.location=publicKey.pem
 
 mp.jwt.verify.issuer=jenga
 mp.jwt.verify.clock.skew=30
