gen openapi files on build

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,7 @@ quarkus.banner.path=banner.txt
 
 quarkus.smallrye-openapi.enabled=true
 quarkus.smallrye-openapi.path=/openapi
+quarkus.smallrye-openapi.store-schema-directory=target/openapi
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger
