Fixed problems with Google API

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,7 +52,7 @@ quarkus.langchain4j.ai.gemini.chat-model.model-id=gemini-2.5-flash
 quarkus.langchain4j.ai.gemini.timeout=60s
 
 # Google Search API endpoint
-quarkus.rest-client.google.api.url=https://customsearch.googleapis.com
+quarkus.rest-client.google-search-api.url=https://www.googleapis.com
 google.api.key=${GOOGLE_API_KEY}
 google.cse.id=${GOOGLE_CSE_ID}
 
